ollama/ollama-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ollama
spec:
  selector:
    app: ollama
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 11434
      targetPort: 11434
    - protocol: TCP
      port: 8080
      targetPort: 8080
