ollama/ollama-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ollama-webui-ingress
spec:
  tls:
    - hosts:
        - ollama.lumos.run
      secretName: ollama-cloudflare-cert
  rules:
    - host: ollama.lumos.run
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ollama
                port:
                  name: ollama-webui
